--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-navigation/native": "^7.1.14",
+    "@react-navigation/native-stack": "^7.3.21",
     "@tanstack/react-query": "^5.80.6",
     "@ts-rest/core": "^3.52.1",
     "@ts-rest/react-query": "^3.52.1",
@@ -26,6 +28,7 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "^4.11.1",
     "react-native-web": "^0.20.0",
     "zod": "^3.25.56",
     "zustand": "^5.0.5"
