Add account setup page

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.9.0",
     "expo": "~53.0.10",
     "expo-status-bar": "~2.2.3",
+    "native": "link:react-navigation\\native",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
