--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,11 +20,13 @@
     "@ts-rest/react-query": "^3.52.1",
     "axios": "^1.9.0",
     "expo": "~53.0.10",
+    "expo-av": "^15.1.7",
     "expo-status-bar": "~2.2.3",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.3",
+    "react-native-confetti-cannon": "^1.5.2",
     "react-native-dotenv": "^3.4.11",
     "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.0",
