Resolving merge conflicts

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -20,9 +20,13 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev && pnpm prisma:generate"
+    "prisma:migrate": "prisma migrate dev && pnpm prisma:generate",
+    "index:vector-db": "ts-node -r tsconfig-paths/register src/scripts/index-vector-db.ts",
+    "test:vector-db": "ts-node -r tsconfig-paths/register src/scripts/test-vector-db.ts"
   },
   "dependencies": {
+    "@langchain/community": "^0.3.48",
+    "@langchain/openai": "^0.5.18",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -37,11 +41,13 @@
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "kysely": "^0.28.2",
+    "langchain": "^0.3.29",
     "nestjs-pino": "^4.4.0",
     "openai": "^5.8.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.0",
+    "pgvector": "^0.2.1",
     "pino-http": "^10.5.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
