--- a/Backend/package.json
+++ b/Backend/package.json
@@ -34,9 +34,11 @@
     "@ts-rest/core": "^3.52.1",
     "@ts-rest/nest": "^3.52.1",
     "@ts-rest/open-api": "^3.52.1",
+    "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "kysely": "^0.28.2",
     "nestjs-pino": "^4.4.0",
+    "openai": "^5.8.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.0",
