--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,3 +1,4 @@
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=excer-app"
 LOG_LEVEL=info
-JWT_SECRET="your-secret-key" 
+JWT_SECRET="your-secret-key"
+BRIGHTDATA_API_KEY="key"
