updating example env file

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,4 +1,4 @@
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=excer-app"
 LOG_LEVEL=info
 JWT_SECRET="your-secret-key"
-OPENAI_API_KEY="your-openai-api-key"
+OPENAI_KEY="your-openai-api-key"
