--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -41,6 +41,7 @@
     "@babel/runtime": "^7.27.6",
     "@types/react": "~19.0.10",
     "babel-plugin-module-resolver": "^5.0.2",
+    "prettier": "^3.6.2",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.8.3"
   },
